# https-everywhere-py

./: .appveyor.yml  .cirrus.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
https_everywhere/: __init__.py  __main__.py  _chrome_preload_hsts.py  _fetch.py  _fixme.py  _mozilla_preload_hsts.py  _rules.py  _unregex.py  _util.py  adapter.py  logging.py  session.py
https_everywhere/core/: InBufferReplacer.py  InFileReplacer.py  __init__.py
https_everywhere/replacers/: HEReplacer.py  HSTSPreloadReplacer.py
tests/: test_adapter.py  test_fetch.py  test_preload.py  test_rewrite.py  test_rules.py  test_session.py  test_unregex.py  test_upstream.py  test_util.py
