[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

# Copyright 2020 John Vandenberg
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "https-everywhere"
authors = [{email = "jayvdb@gmail.com"}]
license = {text = "Apache-2.0"}
description = "Privacy for Pythons. Requests adapters for HTTPS, including HSTS preloading and HTTPS Everywhere rules"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security",
    "Development Status :: 4 - Beta",
]
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
dependencies = [
    "requests[security]",
    "appdirs",
    "logging-helper",
    "cached-property",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jayvdb/https-everywhere-py"

[project.optional-dependencies]
testing = [
    "unittest-expander",
    "lxml", # lxml is optional, needed for testing upstream rules
    "tldextract",
    "regex",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
    "https_everywhere",
    "https_everywhere.*",
]
namespaces = false

[tool.setuptools_scm]

[tool.distutils.bdist_wheel]
universal = 1
